[package]
name = "vrp_pricing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vrp_pricing"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.3"  # Add this line
permutohedron = "0.2.4"  # Add this line